$Id: History,v 1.161 2001-11-12 17:42:39 stanaka Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     *************************************************************
     * Note that modeling and test have their own History files. *
     *************************************************************

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

History file for visualization category
---------------------------------------
13th Nov 2001   Hajime Yoshida and Minamimoto (vis-V03-02-17)
- Updation of G4RTJpegMaker.cc for Windows platform (raytracer-V03-02-01). 

7th November 2001  John Allison  (vis-V03-02-16 needs config-V03-02-09)
- Corrected compilation error.

6th November 2001  John Allison  (vis-V03-02-15 needs config-V03-02-09)
- Added /vis/viewer/flush = refresh + update.
- Moved /vis/viewer/lights and viewpoint to /vis/viewer/set.
- Added /vis/viewer/set/upThetaPhi and upVector.
- Added refresh|flush option to /vis/scene/notifyHandlers.
- Moved HepRepFile classes to HepRep/ directory and removed HepRep classes
  therein.

1st October 2001  Joseph Perl
- Added first version of pure C++ HepRep driver, HepRepFile.
  See HepRep/README for details.

10th September 2001  John Allison  (needs greps-V03-02-04)
- (Non-standard tag JA-RAEOE.) 
