@@ -21,7 +21,7 @@
 // ********************************************************************
 //
 //
-// $Id: G4OpenGLXmStyleCallbacks.cc,v 1.5 2001-07-11 10:08:58 gunter Exp $
+// $Id: G4OpenGLXmStyleCallbacks.cc,v 1.6 2001-11-12 18:22:09 johna Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -65,6 +65,7 @@ void G4OpenGLXmViewer::drawing_style_callback (Widget w,
     break;
 
   default:
+    style = G4ViewParameters::wireframe;
     G4Exception("Unrecognised case in drawing_style_callback.");
   }
 
@@ -97,6 +98,7 @@ void G4OpenGLXmViewer::rep_style_callback (Widget w,
     break;
 
   default:
+    style = G4ViewParameters::polyhedron;
     G4Exception("Unrecognised case in rep_style_callback.");
   }
 
