@@ -21,7 +21,7 @@
 // ********************************************************************
 //
 //
-// $Id: G4RayTracerViewer.cc,v 1.8 2001-07-11 10:09:05 gunter Exp $
+// $Id: G4RayTracerViewer.cc,v 1.9 2001-11-12 18:22:10 johna Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 
 #include "G4RayTracerViewer.hh"
@@ -66,7 +66,9 @@ void G4RayTracerViewer::SetView() {
   theTracer->SetTargetPosition(targetPoint);
   theTracer->SetEyePosition(cameraPosition);
   theTracer->SetHeadAngle(fVP.GetViewpointDirection().phi());
-  theTracer->SetLightDirection(-fVP.GetActualLightpointDirection());
+  const G4Vector3D
+    actualLightpointDirection(-fVP.GetActualLightpointDirection());
+  theTracer->SetLightDirection(actualLightpointDirection);
 }
 
 
